...
    /// Button to add ride
    var addRideButton: some View {
        HStack {
            Button(action: {
                self.showAddRideModal.toggle()
            }) {
                Image(systemName: "car.fill")
                    .font(.largeTitle)
            }
            .foregroundColor(.blue)
        }
        .sheet(isPresented: $showAddRideModal) {
            AddRide(isShowing: self.$showAddRideModal,
...
                print(UserIDUtils.getUserID())
                // background thread
                DispatchQueue.main.asyncAfter(deadline: .now() + 0.2) {
                    self.drawerOpen.toggle()
                }
            }) {
                Image(systemName: "gear")
                    .font(.largeTitle)
            }
            .foregroundColor(.blue)
        }
    }

...
            } else {
                ZStack {
                    NavigationView {
                        // Ride table
                        RideTable(ridesViewModel: self.ridesViewModel).environmentObject(database)
                        // Navigation configurations
                        .navigationBarTitle("Rides", displayMode: .inline)
                        .navigationBarItems(leading: sideMenuButton,
                                            trailing: HStack {
                                                filterButton
                                                addRideButton
                                            }
                        )
...
